# deepcode

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  MORNING_REPORT.md  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.scripts.config.ts
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/cli/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/desktop/: README.md  electron-builder.yml  package.json  postcss.config.template.js  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.template.ts  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  credentials.rs  lib.rs  main.rs  settings.rs  snapshots.rs  tools.rs  voice.rs
apps/lsp/: README.md  package.json  tsconfig.json  vitest.config.ts
docs/: BEHAVIOR_PARITY.md  DEMO_SCRIPT.md  DEVELOPMENT_PLAN.md  HANDOFF.md  MIGRATION_FROM_CLAUDE_CODE.md  RELEASING.md  SHIPPING_MAC.md  VISUAL_DESIGN.html  VOICE_INPUT.md  cli-flags.md  core-api.md  m1-validation.md  quickstart.md  security-model.md
release-artifacts/: README.md  SIGNING_LOG.md  install-cli.sh
scripts/: gen-release-notes.test.ts  gen-release-notes.ts  install-cron-daemon.sh  make-dmg.sh  sandbox-net-poc.sh  sign-and-notarize.sh  uninstall-cron-daemon.sh
(+118 files in other folders)
